# Vulkan2DEngine

./: .gitignore  CMakeLists.txt  CMakeLists.txt.DotSettings  CMakePresets.json  README.md  vcpkg.json
Assets/Animations/: CharacterSpriteSheet.csv
Assets/Shaders/: Fragment.frag  Fragment.frag.spv  Triangle.frag  Triangle.vert  Triangle.vert.spv  Vertex.vert  Vertex.vert.spv
Assets/Textures/: Pong.tileset.json  imgui.ini  solids.tileset.json
Assets/Textures/2D Pixel Dungeon Asset Pack v2.0/2D Pixel Dungeon Asset Pack/character and tileset/: imgui.ini
Assets/Textures/Assets/Scenes/: .SandboxScene.playmode.json  SandboxScene.json
Docs/: EngineDocumentation.md  EngineFunctionReference.md  EngineFunctionReference.rtf  Generate-EngineFunctionReference.ps1  HeaderReference.md
DocsSite/: app.js  index.html  launch-docs.bat  launch-docs.ps1  styles.css
Engine/: CMakeLists.txt
Engine/Component/: EntityComponent.h  RegisterSceneComponents.cpp  RegisterSceneComponents.h  SceneComponent.h  SceneComponentRegistry.h  SceneComponentTraits.h
Engine/Component/Gameplay/: DebugSettingsComponent.h  PlayerMovementComponent.h
Engine/Core/: Application.cpp  Application.h  InputState.cpp  InputState.h
Engine/Editor/: CoreComponentInspectorRegistry.cpp  CoreComponentInspectorRegistry.h  EditorLayer.cpp  EditorLayer.h  EditorSceneController.cpp  EditorSceneController.h  EditorViewportMath.cpp  EditorViewportMath.h  SceneEditorPanel.cpp  SceneEditorPanel.h  SceneViewportPanel.cpp  SceneViewportPanel.h  TileMapEditorController.cpp  TileMapEditorController.h  TileMapEditorPanel.cpp  TileMapEditorPanel.h  TileSetEditorPanel.cpp  TileSetEditorPanel.h
Engine/Gameplay/: DebugSettingsComponent.h  PlayerMovementComponent.h
Engine/Math/: Transform2D.h  TransformMath2D.cpp  TransformMath2D.h
Engine/Object/: Actor.h  Object.h  ObjectRegistry.h  Player.cpp  Player.h
Engine/Platform/: Window.cpp  Window.h
Engine/Reflection/: Property.h  PropertySerialization.h  PropertyTypeTraits.h
Engine/Renderer/: IRenderer2D.cpp  IRenderer2D.h  ImGuiLayer.cpp  ImGuiLayer.h  RenderTypes.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanQuadInstanceBuffer.cpp  VulkanQuadInstanceBuffer.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanSync.cpp  VulkanSync.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h  VulkanViewportRenderTarget.cpp  VulkanViewportRenderTarget.h
Engine/Scene/: Camera2D.cpp  Camera2D.h  CollisionTypes.h  Components.h  Entity.cpp  Entity.h  GameObject.h  GameObjectHandle.cpp  GameObjectHandle.h  Scene.cpp  Scene.h  SceneComponents.h  SceneSerializer.cpp  SceneSerializer.h  SpriteAnimation.cpp  SpriteAnimation.h  SpriteAnimationSet.cpp  SpriteAnimationSet.h  SpriteRenderer.h  TileMapAssetSerializer.cpp  TileMapAssetSerializer.h  TileSetAsset.cpp  TileSetAsset.h
Sandbox/: Main.cpp  PongApp.cpp  PongApp.h  SandboxApp.cpp  SandboxApp.h
Sandbox/Pong/: Ball.cpp  Ball.h  Padel.cpp  Padel.h
Tools/RiderTemplates/: README.md  SceneComponent.WithProperty.h.txt  SceneComponent.h.txt
scripts/: CompileShaders.py  WatchShader.py  setup.bat  setup.ps1
